[options]
install_requires =
    pycloudmessenger@http://github.com/IBM/pycloudmessenger/archive/v0.8.0.tar.gz
    pandas>=2.0
    pyspark==3.3.0
    cassandra-driver==3.28.0
    logzero
    black
    ipykernel
    protobuf==4.22.*
    confluent-kafka==2.0.*
    PyModelarDB@git+https://github.com/ModelarData/PyModelarDB.git

[options.extras_require]
tests = 
    pytest
    pytest-mock