[options]
install_requires =
    pycloudmessenger==0.8.2
    pandas>=2.0
    pyspark>=3.3.0
    cassandra-driver>=3.28.0
    logzero
    black
    ipykernel
    protobuf==4.22.*
    confluent-kafka>=2.0
    pyarrow>=13.0.0
    PyModelarDB@git+https://github.com/ModelarData/PyModelarDB.git

[options.extras_require]
tests = 
    pytest
    pytest-mock